# Flexsimulation

./: .gitignore  AGENTS.md  README.md  REPOSITORY_FILES.md  pyproject.toml
configs/: activations.yaml  default.yaml  scenarios.yaml  segments.yaml
docs/: README.md
docs/business-case/: customer-value-and-progression.md  executive-playground-purpose.md  fragmentation-risk.md  scaling-market-results.md  scenario-comparison.md  value-attribution.md
docs/capabilities/: capability-map.md  edge-capabilities.md  outsourcing-boundaries.md  system-capabilities.md
docs/model/: baseline-and-activation.md  cross-asset-portfolio-effects.md  observable-energy-state.md  reality-proxy.md  rebound-scheduling.md
memory/: 00-index.md  01-project-overview.md  02-design-principles.md  03-capability-model.md  04-business-case-model.md  05-observation-boundary.md  06-codex-workflow.md  bootstrap-manifest.json
requirements/: README.md
requirements/package-runs/: README.md  TEMPLATE-design.md  TEMPLATE-findings.md  TEMPLATE-functions.md  TEMPLATE-review.md
src/flexsimulation/: __init__.py  activation.py  base_load_factory.py  base_load_objects.py  base_load_timeseries.py  (+14 more)
tests/: test_base_load_factory.py  test_base_load_objects.py  test_base_load_timeseries.py  test_baseline_activation.py  test_business_case.py  test_heating_demand.py  test_heating_load_factory.py  test_heating_load_objects.py  test_heating_timeseries_integration.py  test_observation_boundary.py  test_population.py  test_rebound.py  test_residual_load_diagnostics.py  test_simulation_time.py  test_temperature.py
(+18 files in other folders)
